-bug#0001604: HEX Counter values enclosed in quotes not recognized as HEX
-bug#0001607: Web Basic authentication does not work with fastcgi 
-bug#0001609: Script server timeout too aggressive with 10 second poller interval
-bug#0001620: Max OID's max value reported incorrectly in Web UI
-bug#0001623: SQL JOIN on user_log without INDEX (performance issue)
-bug#0001633: PA: new hook in graph.php 
-bug#0001746: SNMP Hex-String matching 
-bug#0001772: Script Server is not honouring reindex method "Index Count Changed" and "Verify All Fields" 
-bug#0001776: Cacti Support for Multiple Simultaneous Databases Broken 
-bug#0001632: script server treats quoted arguments with spaces as multiple separate arguments
-bug#0001816: Cannot export graph data to CSV with IE 8 (8.0.7600.16385) 
-bug#0001819: MySQL "TYPE=" command deprecated since MySQL 4.1 removed in MySQL 5.4.4  
-bug#0001880: When Performing Form Validation Error Message Areas Not Highlighted Upon Form Save
-bug: remove graph permissions if graph is removed
-bug: remove host permissions if host is removed
-bug: add_tree.php did not allow nodes with propagating sort options
-bug: when adding a tree node via the api numeric and natural were reversed
-bug: Some snmp agents don't getnext on '.1' and need another oid '.1.3'
-bug: Remove call pass by reference from function declarations
-bug: When creating new graphs without a data source, print error to user instead of throwing php error
-bug: Browser query string does not contain arguments
-bug: inject_form_variables does not operate if more than 1 variable needs replacing
-bug: GRPINT now supporting AVERAGE, LAST, MAX and MIN correctly (MAX of MAX, MAX of AVERAGEs now possible)
-bug: verify DS MAX value on data source create (courtesy Fireball)
-bug: Logarithmic Scaling and units-si dependencies fixed (thanks to ke6oms)
-bug: Turn off process leveling if there are not enough poller items to substantiate it
-bug: allow empty [upper|lower]_limit even without autoscaling