@@ -66,11 +66,12 @@ NOTE: Someone remove duplication between 0.8.7f and 0.8.8
 -bug#0001609: Script server timeout too aggressive with 10 second poller interval
 -bug#0001620: Max OID's max value reported incorrectly in Web UI
 -bug#0001623: SQL JOIN on user_log without INDEX (performance issue)
+-bug#0001632: script server treats quoted arguments with spaces as multiple separate arguments
 -bug#0001633: PA: new hook in graph.php 
 -bug#0001746: SNMP Hex-String matching 
 -bug#0001772: Script Server is not honouring reindex method "Index Count Changed" and "Verify All Fields" 
--bug#0001776: Cacti Support for Multiple Simultaneous Databases Broken 
--bug#0001632: script server treats quoted arguments with spaces as multiple separate arguments
+-bug#0001776: Cacti Support for Multiple Simultaneous Databases Broken
+-bug#0001783: Graph Export: The ExportDate is wrong -> we will print current time and number of graphs, then 
 -bug#0001816: Cannot export graph data to CSV with IE 8 (8.0.7600.16385) 
 -bug#0001819: MySQL "TYPE=" command deprecated since MySQL 4.1 removed in MySQL 5.4.4  
 -bug#0001880: When Performing Form Validation Error Message Areas Not Highlighted Upon Form Save
